--- a/calendar/src/calendar/index.css
+++ b/calendar/src/calendar/index.css
@@ -7,6 +7,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background: rgba(0, 0, 0, 0.5); /* Dimmed background */
-  z-index: 1000;
+  background-color: rgba(0, 0, 0, 0.3);
+  z-index: 1;
 }
